# hstrie

./: .gitignore  ChangeLog.md  LICENSE  README.md  TAGS  Trie.cabal  Trie.html  doc-index.html  hstrie.cabal  index.html  mini_Trie.html  package.yaml  stack.yaml
.stack-work/install/x86_64-osx/lts-5.16/7.10.3/flag-cache/: Trie-0.1.0.0-ca65483a5414facf2ab7bc3aaadf0f53  Trie-0.1.0.0-e13fc43f3d7bbb052da388c4c6178bc0
.stack-work/install/x86_64-osx/lts-5.16/7.10.3/lib/x86_64-osx-ghc-7.10.3/Trie-0.1.0.0-30L2W4HiqooLWA2gwFmFv0/: libHSTrie-0.1.0.0-30L2W4HiqooLWA2gwFmFv0-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.16/7.10.3/pkgdb/: Trie-0.1.0.0-e13fc43f3d7bbb052da388c4c6178bc0.conf  package.cache
Trie.hsproj/: Trie.html  index-frames.html
bench/: bench.hs
doctest/: doctests.hs
src/Data/: Trie.hs  TrieBag.hs  TrieBin.hs  TrieMap.hs  TrieSet.hs
src/Data/Coerce/: Utilities.hs
src/Data/Trie/Internal/: Ap.hs
src/Data/Trie/List/: Map.hs  Set.hs
src/Data/Trie/Vector/: Set.hs
test/: Spec.hs
trie.hsproj/: HStrie.hs  Tests.hs  Trie.hs  _HStrie.hsplay  _Tests.hsplay  _Trie.hsplay  trie.cabal
trie0.hsproj/: Tests.hs  Trie.hs
