name:                hstrie
version:             0.2.0.0
synopsis:            Basic Patricia Trie
description:         Please see README.md
homepage:            https://github.com/oisdk/hstrie
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           2016 Donnacha Oisín Kidney
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Trie
                     , Data.TrieSet
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5
                     , QuickCheck >= 2.8
                     , semiring-num >= 0.1
                     , vector >= 0.11
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite hstrie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hstrie
                     , QuickCheck >= 2.8
                     , doctest
                     , containers >= 0.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             bench.hs
  ghc-options:         -O2 -rtsopts -threaded

  build-depends:       base >= 4.8
                     , hstrie
                     , criterion >= 0.6
                     , containers >= 0.5

source-repository head
  type:     git
  location: https://github.com/oisdk/hstrie
